Fri Nov 21 14:41:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_ACE.mwc:
          Exclude orbsvcs/DevGuideExamples

Wed Nov 19 15:14:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/be/be_sunsoft.cpp:
          Attempted fix of the 64bit compile warnings problem.

Wed Nov 19 10:59:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * TAO_IDL/be/be_helper.cpp:
          Reverted Reversion of Nov 18 for change of Oct 13 to convert
          format specifiers to plain ascii. This change was not the
          introducer of the 64bit compile warnings problem.

Wed Nov 19 09:53:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tao/orbsvcs/orbsvcs/av/SCTP_SEQ.cpp:
        * tao/strategies/SCIOP_Acceptor.cpp:
        * tao/strategies/SCIOP_Connection_Handle.cpp:
        * tao/strategies/SCIOP_Profile.cpp:
          added missing #include "ace/os_include/os_netdb.h".

Tue Nov 18 16:08:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3499_Regression/DLL_Service_Host.cpp:
          ACE_throw_bad_alloc is actually defined as including the throw
          command itself so it can't be used with ACE_NEW_THROW_EX.

Tue Nov 18 12:07:33 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3108_Regression/run_test.pl:
          Use the correct perl variable to delete the file

Tue Nov 18 10:39:33 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_helper.cpp:
          Reverted change of Oct 13 to convert format specifiers to
          plain ascii, let us see if this resolves the 64bit compile
          warnings

Tue Nov 18 10:20:33 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2560_Regression/client.cpp:
          No need to convert for string_to_object

        * tests/Bug_2560_Regression/run_test.pl:
          Corrected client argument and increased server timeout

        * tests/Bug_2560_Regression/server.cpp: